# aderant-task

./: .env.example  .gitignore  README.md  SETUP.md  app.py  config.py  pyproject.toml  results.md
data/: Clients.xlsx  InvoiceLineItems.xlsx  Invoices.xlsx
scripts/: generate_sample_data.py
src/: __init__.py  answer_generator.py  chat.py  code_generator.py  data_loader.py  executor.py  schema.py
src/common/: __init__.py  constants.py  llm_constants.py  prompt_templates.py
tests/: __init__.py  test_pipeline.py
