[project]
name = "aderant-task"
version = "0.1.0"
description = "RAG-style Q&A system for tabular business data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "streamlit>=1.30.0",
    "pandas-stubs~=2.3.3",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # Line length handled by formatter
